# ccmux

./: .gitignore  CLAUDE.md  LICENSE  README.md  ccwt.sh  install.sh  pyproject.toml  refactoring-plan.md  tmux.conf
.claude/: settings.json
ccmux/: __init__.py  __main__.py  backend.py  cli.py  config.py  display.py  exceptions.py  git_ops.py  instance_ops.py  naming.py  session_layout.py  session_naming.py  session_ops.py  sidebar.py  sidebar.tcss  state.py  tmux.conf  tmux_config.py  tmux_ops.py  version_check.py
ccmux/state/: __init__.py  instance.py  session.py  store.py
ccmux/ui/: __init__.py  app.py  demo.py  pid.py  widgets.py
ccmux/ui/sidebar/: __init__.py  __main__.py  controller.py  model.py  process_id.py  sidebar.tcss  sidebar_app.py  snapshot.py  view.py  widgets.py
ccmux/ui/sidebar/widgets/: __init__.py  about_panel.py  instance_row.py  non_interactive_static.py  repo_header.py  repo_instances_list.py  repo_sessions_list.py  session_row.py  title_banner.py
ccmux/ui/sidebar/widgets/instance_row/: __init__.py  instance_row.py  instance_row.tcss
ccmux/ui/sidebar/widgets/repo_header/: __init__.py  repo_header.py  repo_header.tcss
ccmux/ui/sidebar/widgets/repo_instances_list/: __init__.py  repo_instances_list.py  repo_instances_list.tcss
ccmux/ui/tmux/: __init__.py  config.py  tmux.conf
ccwt/: __init__.py  __main__.py  cli.py  state.py
scripts/: demo-setup.sh
tests/: __init__.py  demo_sidebar.py  test_backend.py  test_build_claude_command.py  test_config.py  test_display.py  test_exceptions.py  test_git_ops.py  test_session_ops.py  test_shallow.py  test_sidebar.py  test_sidebar_tmux.sh  test_state.py  test_tmux_check.py  test_tmux_config.py  test_tmux_formatting.py  test_version_check.py
