[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccmux"
version = "2.0.0"
description = "Claude Code Multiplexer - Manage multiple Claude Code instances"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ray Kampmeier"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cyclopts>=2.0.0",
    "rich>=13.0.0",
    "textual>=1.0.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.scripts]
ccmux = "ccmux.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/raykamp-tht/claude-code-worktrees"
Repository = "https://github.com/raykamp-tht/claude-code-worktrees"

[tool.setuptools.packages.find]
include = ["ccmux*"]

[tool.setuptools.package-data]
ccmux = ["tmux.conf"]
"ccmux.ui" = ["sidebar.tcss"]
