[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ccmux"
dynamic = ["version"]
description = "Terminal UI for managing multiple AI coding sessions (Claude Code, OpenCode)"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Ray Kampmeier"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cyclopts>=2.0.0",
    "rich>=13.0.0",
    "textual>=1.0.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.scripts]
ccmux = "ccmux.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/TheHumbleTransistor/ccmux"
Repository = "https://github.com/TheHumbleTransistor/ccmux"

[tool.setuptools.packages.find]
include = ["ccmux*"]

[tool.setuptools.package-data]
"ccmux.ui.sidebar" = ["sidebar.tcss"]

[tool.setuptools_scm]
